agregando mas icionos y insertando un nuevo pedido desde completed payment

--- a/about-us.html
+++ b/about-us.html
@@ -1289,7 +1289,7 @@
                                 <div class="banner-content h-100 @@sectionAnimation">
                                     <h2 class="title white-text_color text-uppercase font-style_italic">Secret of beautiful skin</h2>
                                     <div class="popup-btn">
-                                        <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1"><i class="dlicon media-1_button-play"></i>
+                                        <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1"><i class="bi bi-play-fill"></i>
                                         </a>
                                     </div>
                                 </div>
