--- a/affiliate-product.html
+++ b/affiliate-product.html
@@ -1112,7 +1112,7 @@
                                                 wishlist</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0)"><i class="lastudioicon-compare"></i> Add to compare</a>
+                                            <a href="javascript:void(0)"><i class="bi bi-eye-fill"></i> Add to compare</a>
                                         </li>
                                     </ul>
                                     <div class="sku">
@@ -1339,14 +1339,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1371,14 +1371,14 @@
                                             <span class="sticker">New</span>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1403,14 +1403,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1434,14 +1434,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1465,14 +1465,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1496,14 +1496,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
