--- a/countdown-product.html
+++ b/countdown-product.html
@@ -1015,7 +1015,7 @@
                                                 <ul>
                                                     <li class="popup-btn">
                                                         <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1">
-                                                            <i class="dlicon media-1_button-play"></i>
+                                                            <i class="bi bi-play-fill"></i>
                                                         </a>
                                                     </li>
                                                     <li class="gallery-item" data-src="assets/images/product/large-size/1.jpg">
@@ -1033,7 +1033,7 @@
                                                 <ul>
                                                     <li class="popup-btn">
                                                         <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1">
-                                                            <i class="dlicon media-1_button-play"></i>
+                                                            <i class="bi bi-play-fill"></i>
                                                         </a>
                                                     </li>
                                                     <li class="gallery-item" data-src="assets/images/product/large-size/2.jpg">
@@ -1051,7 +1051,7 @@
                                                 <ul>
                                                     <li class="popup-btn">
                                                         <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1">
-                                                            <i class="dlicon media-1_button-play"></i>
+                                                            <i class="bi bi-play-fill"></i>
                                                         </a>
                                                     </li>
                                                     <li class="gallery-item" data-src="assets/images/product/large-size/3.jpg">
@@ -1069,7 +1069,7 @@
                                                 <ul>
                                                     <li class="popup-btn">
                                                         <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1">
-                                                            <i class="dlicon media-1_button-play"></i>
+                                                            <i class="bi bi-play-fill"></i>
                                                         </a>
                                                     </li>
                                                     <li class="gallery-item" data-src="assets/images/product/large-size/4.jpg">
@@ -1175,7 +1175,7 @@
                                                 wishlist</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0)"><i class="lastudioicon-compare"></i> Add to compare</a>
+                                            <a href="javascript:void(0)"><i class="bi bi-eye-fill"></i> Add to compare</a>
                                         </li>
                                     </ul>
                                     <div class="sku">
@@ -1379,14 +1379,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.php" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.php" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1411,14 +1411,14 @@
                                             <span class="sticker">New</span>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.php" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.php" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1443,14 +1443,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.php" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.php" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1474,14 +1474,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.php" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.php" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1505,14 +1505,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.php" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.php" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1536,14 +1536,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.php" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.php" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1867,7 +1867,7 @@
                                             <a href="javascript:void(0)"><i class="bi bi-suit-heart-fill"></i> Add to wishlist</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0)"><i class="lastudioicon-compare"></i> Add to compare</a>
+                                            <a href="javascript:void(0)"><i class="bi bi-eye-fill"></i> Add to compare</a>
                                         </li>
                                     </ul>
                                     <div class="sku">
