--- a/blog-right-sidebar.html
+++ b/blog-right-sidebar.html
@@ -1032,7 +1032,7 @@
                                                 </a>
                                                 <div class="popup-btn">
                                                     <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1"><i
-                                                        class="dlicon media-1_button-play"></i>
+                                                        class="bi bi-play-fill"></i>
                                                     </a>
                                                 </div>
                                             </div>
