--- a/custom-style-2.html
+++ b/custom-style-2.html
@@ -1009,7 +1009,7 @@
                                                     <ul>
                                                         <li class="popup-btn">
                                                             <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1">
-                                                                <i class="dlicon media-1_button-play"></i>
+                                                                <i class="bi bi-play-fill"></i>
                                                             </a>
                                                         </li>
                                                         <li class="gallery-item" data-src="assets/images/product/large-size/1.jpg">
@@ -1029,7 +1029,7 @@
                                                     <ul>
                                                         <li class="popup-btn">
                                                             <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1">
-                                                                <i class="dlicon media-1_button-play"></i>
+                                                                <i class="bi bi-play-fill"></i>
                                                             </a>
                                                         </li>
                                                         <li class="gallery-item" data-src="assets/images/product/large-size/2.jpg">
@@ -1049,7 +1049,7 @@
                                                     <ul>
                                                         <li class="popup-btn">
                                                             <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1">
-                                                                <i class="dlicon media-1_button-play"></i>
+                                                                <i class="bi bi-play-fill"></i>
                                                             </a>
                                                         </li>
                                                         <li class="gallery-item" data-src="assets/images/product/large-size/3.jpg">
@@ -1069,7 +1069,7 @@
                                                     <ul>
                                                         <li class="popup-btn">
                                                             <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1">
-                                                                <i class="dlicon media-1_button-play"></i>
+                                                                <i class="bi bi-play-fill"></i>
                                                             </a>
                                                         </li>
                                                         <li class="gallery-item" data-src="assets/images/product/large-size/4.jpg">
@@ -1089,7 +1089,7 @@
                                                     <ul>
                                                         <li class="popup-btn">
                                                             <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1">
-                                                                <i class="dlicon media-1_button-play"></i>
+                                                                <i class="bi bi-play-fill"></i>
                                                             </a>
                                                         </li>
                                                         <li class="gallery-item" data-src="assets/images/product/large-size/5.jpg">
@@ -1109,7 +1109,7 @@
                                                     <ul>
                                                         <li class="popup-btn">
                                                             <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1">
-                                                                <i class="dlicon media-1_button-play"></i>
+                                                                <i class="bi bi-play-fill"></i>
                                                             </a>
                                                         </li>
                                                         <li class="gallery-item" data-src="assets/images/product/large-size/6.jpg">
@@ -1169,7 +1169,7 @@
                                                 wishlist</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0)"><i class="lastudioicon-compare"></i> Add to compare</a>
+                                            <a href="javascript:void(0)"><i class="bi bi-eye-fill"></i> Add to compare</a>
                                         </li>
                                     </ul>
                                     <div class="sku">
@@ -1373,14 +1373,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1405,14 +1405,14 @@
                                             <span class="sticker">New</span>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1437,14 +1437,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1468,14 +1468,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1499,14 +1499,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1530,14 +1530,14 @@
                                             </a>
                                             <div class="add-actions">
                                                 <ul>
-                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="lastudioicon-shopping-cart-3"></i></a>
+                                                    <li><a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To cart"><i class="bi bi-bag-plus-fill"></i></a>
                                                     </li>
                                                     <li class="Yena's-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Yena's View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                     <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="bi bi-suit-heart-fill"></i></a>
                                                     </li>
-                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="lastudioicon-compare"></i></a>
+                                                    <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i class="bi bi-eye-fill"></i></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1861,7 +1861,7 @@
                                             <a href="javascript:void(0)"><i class="bi bi-suit-heart-fill"></i> Add to wishlist</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0)"><i class="lastudioicon-compare"></i> Add to compare</a>
+                                            <a href="javascript:void(0)"><i class="bi bi-eye-fill"></i> Add to compare</a>
                                         </li>
                                     </ul>
                                     <div class="sku">
