--- a/index-7.html
+++ b/index-7.html
@@ -1009,7 +1009,7 @@
                                             <div class="banner-content">
                                                 <div class="banner-inner_content">
                                                     <div class="popup-btn">
-                                                        <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1"><i class="dlicon media-1_button-play"></i>
+                                                        <a class="popup-vimeo" href="https://player.vimeo.com/video/172601404?autoplay=1"><i class="bi bi-play-fill"></i>
                                                         </a>
                                                     </div>
                                                 </div>
