--- a/shop-carousel.html
+++ b/shop-carousel.html
@@ -1026,13 +1026,13 @@
                                                         class="lastudioicon-shopping-cart-3"></i></a>
                                                 </li>
                                                 <li class="yena-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Quick View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                 </li>
                                                 <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i
                                                         class="bi bi-suit-heart-fill"></i></a>
                                                 </li>
                                                 <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i
-                                                        class="lastudioicon-compare"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -1060,13 +1060,13 @@
                                                         class="lastudioicon-shopping-cart-3"></i></a>
                                                 </li>
                                                 <li class="yena-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Quick View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                 </li>
                                                 <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i
                                                         class="bi bi-suit-heart-fill"></i></a>
                                                 </li>
                                                 <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i
-                                                        class="lastudioicon-compare"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -1095,13 +1095,13 @@
                                                         class="lastudioicon-shopping-cart-3"></i></a>
                                                 </li>
                                                 <li class="yena-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Quick View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                 </li>
                                                 <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i
                                                         class="bi bi-suit-heart-fill"></i></a>
                                                 </li>
                                                 <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i
-                                                        class="lastudioicon-compare"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -1130,13 +1130,13 @@
                                                         class="lastudioicon-shopping-cart-3"></i></a>
                                                 </li>
                                                 <li class="yena-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Quick View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                 </li>
                                                 <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i
                                                         class="bi bi-suit-heart-fill"></i></a>
                                                 </li>
                                                 <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i
-                                                        class="lastudioicon-compare"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -1165,13 +1165,13 @@
                                                         class="lastudioicon-shopping-cart-3"></i></a>
                                                 </li>
                                                 <li class="yena-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Quick View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                 </li>
                                                 <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i
                                                         class="bi bi-suit-heart-fill"></i></a>
                                                 </li>
                                                 <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i
-                                                        class="lastudioicon-compare"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -1200,13 +1200,13 @@
                                                         class="lastudioicon-shopping-cart-3"></i></a>
                                                 </li>
                                                 <li class="yena-view-btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><a href="javascript:void(0)" data-bs-toggle="tooltip" data-placement="top" title="Quick View"><i
-                                                        class="lastudioicon-eye"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                 </li>
                                                 <li><a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i
                                                         class="bi bi-suit-heart-fill"></i></a>
                                                 </li>
                                                 <li><a href="compare.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Compare"><i
-                                                        class="lastudioicon-compare"></i></a>
+                                                        class="bi bi-eye-fill"></i></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -1526,7 +1526,7 @@
                                             <a href="javascript:void(0)"><i class="bi bi-suit-heart-fill"></i> Add to wishlist</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0)"><i class="lastudioicon-compare"></i> Add to compare</a>
+                                            <a href="javascript:void(0)"><i class="bi bi-eye-fill"></i> Add to compare</a>
                                         </li>
                                     </ul>
                                     <div class="sku">
